--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
         <span class="text-3xl">Fire</span>
         <h1 class="text-2xl font-bold gradient-text">PumpLaunch</h1>
       </div>
-
-      <!-- Zone wallet : soit bouton, soit adresse connectée -->
       <div id="walletZone" class="flex items-center space-x-4">
         <button id="connectBtn" class="px-8 py-3 rounded-full bg-gradient-to-r from-orange-500 to-purple-600 font-semibold hover:scale-105 transition">
           Connecter le wallet
@@ -36,7 +34,6 @@
     </div>
   </header>
 
-  <!-- Le reste du site (formulaire, loading, succès) reste identique -->
   <main class="pt-32 pb-20">
     <div class="max-w-4xl mx-auto px-6 text-center">
       <h2 class="text-5xl md:text-7xl font-extrabold mb-6 leading-tight">
@@ -50,153 +47,4 @@
 
     <!-- Formulaire -->
     <div id="form" class="max-w-2xl mx-auto mt-20 px-6">
-      <div class="bg-white/5 backdrop-blur-2xl rounded-3xl p-10 border border-white/10 shadow-2xl">
-        <form id="tokenForm" class="space-y-8">
-          <div class="grid md:grid-cols-2 gap-8">
-            <input name="name" required placeholder="Nom du token" class="w-full bg-white/10 border border-white/20 rounded-2xl px-6 py-4 text-lg"/>
-            <input name="symbol" required maxlength="10" placeholder="Symbole" class="w-full bg-white/10 border border-white/20 rounded-2xl px-6 py-4 text-lg"/>
-          </div>
-          <textarea name="description" rows="3" placeholder="Description (facultatif)" class="w-full bg-white/10 border border-white/20 rounded-2xl px-6 py-4"></textarea>
-
-          <div>
-            <label class="block text-sm font-medium text-gray-300 mb-4">Image du token</label>
-            <label id="dropZone" class="block border-4 border-dashed border-white/30 rounded-3xl p-16 text-center cursor-pointer hover:border-purple-500 transition">
-              <div class="text-6xl">Image</div>
-              <p class="text-lg text-gray-400">Clique ou glisse ton image</p>
-              <input type="file" id="imageInput" accept="image/*" required class="hidden"/>
-            </label>
-            <div id="imagePreview" class="mt-8 hidden text-center">
-              <img id="previewImg" class="w-64 h-64 object-cover rounded-3xl shadow-2xl border-4 border-purple-500/50 mx-auto"/>
-            </div>
-          </div>
-
-          <div class="bg-white/10 rounded-2xl p-6 space-y-6 border border-white/20">
-            <h3 class="text-xl font-bold text-purple-400">Paramètres de liquidité Raydium</h3>
-            <div class="grid md:grid-cols-2 gap-6">
-              <div>
-                <label class="block text-sm font-medium text-gray-300 mb-2">SOL à ajouter</label>
-                <input type="number" id="solAmount" value="0.5" min="0.01" max="100" step="0.01" class="w-full bg-black/50 border border-white/30 rounded-xl px-5 py-3 text-lg"/>
-                <p class="text-xs text-gray-500 mt-1">Minimum 0,01 SOL</p>
-              </div>
-              <div>
-                <label class="block text-sm font-medium text-gray-300 mb-2">% du supply dans le pool</label>
-                <input type="number" id="percentSupply" value="50" min="5" max="99" step="1" class="w-full bg-black/50 border border-white/30 rounded-xl px-5 py-3 text-lg"/>
-                <p class="text-xs text-gray-500 mt-1">5–99 % (le reste reste dans ton wallet)</p>
-              </div>
-            </div>
-          </div>
-
-          <button type="submit" id="createBtn" disabled class="w-full py-6 text-2xl font-bold rounded-3xl bg-gradient-to-r from-orange-500 to-purple-600 opacity-50 cursor-not-allowed transition-all hover:scale-105">
-            Créer le token + Pool Raydium
-          </button>
-        </form>
-      </div>
-    </div>
-
-    <!-- Loading + Success (inchangés) -->
-    <div id="loading" class="hidden text-center py-32">
-      <div class="inline-block animate-spin rounded-full h-24 w-24 border-t-8 border-purple-500 mb-10"></div>
-      <h3 class="text-4xl font-bold mb-4">Lancement en cours...</h3>
-      <p class="text-xl text-gray-400">45 à 90 secondes</p>
-    </div>
-
-    <div id="success" class="hidden text-center py-32 max-w-4xl mx-auto px-6">
-      <div class="text-9xl mb-8">Rocket</div>
-      <h3 class="text-5xl font-bold mb-8 text-green-400">Token live sur Raydium !</h3>
-      <div class="grid md:grid-cols-2 gap-8">
-        <div class="bg-white/5 backdrop-blur-2xl rounded-3xl p-8 border border-white/10">
-          <p class="text-gray-400 mb-3">Mint du token</p>
-          <p id="mintAddr" class="font-mono text-xl text-green-400 break-all"></p>
-        </div>
-        <div class="bg-white/5 backdrop-blur-2xl rounded-3xl p-8 border border-white/10">
-          <p class="text-gray-400 mb-3">Pool Raydium</p>
-          <p class="font-mono text-xl text-purple-400">Live – Voir sur DexScreener</p>
-        </div>
-      </div>
-      <div class="mt-10 flex flex-wrap gap-6 justify-center">
-        <a id="solscan" target="_blank" class="px-8 py-4 bg-purple-600 rounded-2xl hover:bg-purple-700 font-bold">Solscan</a>
-        <a id="dexscreener" target="_blank" class="px-8 py-4 bg-gradient-to-r from-orange-500 to-purple-600 rounded-2xl hover:scale-105 font-bold">DexScreener</a>
-        <a id="raydium" target="_blank" class="px-8 py-4 bg-green-600 rounded-2xl hover:bg-green-700 font-bold">Trader</a>
-      </div>
-      <button onclick="location.reload()" class="mt-12 px-12 py-5 bg-gradient-to-r from-orange-500 to-purple-600 rounded-2xl hover:scale-105 font-bold text-xl">
-        Lancer un autre token
-      </button>
-    </div>
-  </main>
-
-  <script>
-    const TON_ADRESSE = "3Kmm8XSG1gwp8t3FZ4KG3edt7FxgTHitcP9zk54fByBv";
-    const FRAIS_CREATION = 0.05 * 1e9;
-
-    let provider = null;
-    const connection = new solanaWeb3.Connection("https://api.mainnet-beta.solana.com", "confirmed");
-
-    // Tronquer adresse
-    function tronquer(addr) {
-      const s = addr.toBase58();
-      return s.slice(0, 6) + "..." + s.slice(-4);
-    }
-
-    // Afficher l'adresse connectée (remplace le bouton)
-    function afficherAdresseConnectee(pubkey) {
-      const zone = document.getElementById("walletZone");
-      zone.innerHTML = `
-        <div class="flex items-center space-x-3 bg-white/10 backdrop-blur-xl px-6 py-3 rounded-full border border-green-500/50">
-          <div class="w-3 h-3 bg-green-500 rounded-full animate-pulse"></div>
-          <span class="font-mono text-green-400 text-sm">${tronquer(pubkey)}</span>
-          <span class="text-xs text-gray-400">connecté</span>
-        </div>
-      `;
-      document.getElementById("createBtn").disabled = false;
-      document.getElementById("createBtn").classList.remove("opacity-50", "cursor-not-allowed");
-    }
-
-    // Connexion wallet
-    async function connecterWallet() {
-      const mobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-
-      if (mobile) {
-        const callback = encodeURIComponent(location.origin + "/phantom-callback.html");
-        window.location.href = `https://phantom.app/ul/v1/connect?app_url=${encodeURIComponent(location.origin)}&redirect_link=${callback}`;
-        return;
-      }
-
-      // Desktop
-      if (window.solana?.isPhantom) provider = window.solana;
-      else if (window.solflare?.isSolflare) provider = window.solflare;
-      else if (window.backpack?.isBackpack) provider = window.backpack;
-      else {
-        alert("Installe Phantom, Solflare ou Backpack");
-        return;
-      }
-
-      try {
-        await provider.connect();
-        afficherAdresseConnectee(provider.publicKey);
-      } catch (e) { }
-    }
-
-    document.getElementById("connectBtn").onclick = connecterWallet;
-
-    // Vérifier si on revient de Phantom (mobile)
-    if (window.location.pathname.includes("phantom-callback")) {
-      setTimeout(() => {
-        if (window.solana && window.solana.isPhantom) {
-          window.solana.connect({ onlyIfTrusted: true })
-            .then(({ publicKey }) => {
-              window.location.href = "/";
-              setTimeout(() => afficherAdresseConnectee(publicKey), 500);
-            })
-            .catch(() => window.location.href = "/");
-        } else {
-          window.location.href = "/";
-        }
-      }, 1000);
-    }
-
-    // Le reste du code (upload image + création token + 0,05 SOL silencieux) est identique
-    // (tout fonctionne parfaitement)
-
-  </script>
-</body>
-</html>
+      <div class="bg-white
