phantom-callback.html

--- a/phantom-callback.html
+++ b/phantom-callback.html
@@ -6,7 +6,7 @@
     <script>
         // Redirige vers la page principale après 1 seconde
         setTimeout(() => {
-            window.location.href = "https://pumplaunch.github.io/";
+            window.location.href = "https://github.com/PumpLaunch/PumpLaunch/blob/main/index.html";
         }, 1000);
     </script>
 </head>
