--- a/phantom-callback.html
+++ b/phantom-callback.html
@@ -4,6 +4,9 @@
   <meta http-equiv="refresh" content="0;url=/" />
 </head>
 <body>
-  Redirection...
+  <script>
+    // Redirige automatiquement vers la page principale
+    window.location.href = "/";
+  </script>
 </body>
 </html>
