phantom-callback.html

--- a/phantom-callback.html
+++ b/phantom-callback.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0;url=/" />
+  <title>Redirection...</title>
 </head>
 <body>
   <script>
-    // Redirige automatiquement vers la page principale
+    // Redirection JavaScript de secours
     window.location.href = "/";
   </script>
+  <h1>Redirection en cours... </h1>
+  <p>Si vous n'êtes pas redirigé automatiquement, cliquez <a href="/">ici</a>.</p>
 </body>
 </html>
