--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     const FRAIS_SERVICE = 0.05 * 1e9; // 0.05 SOL
     // IMPORTANT: Pour un usage en production, vous devez utiliser votre propre clé API NFT.Storage.
     // Ne jamais exposer une clé API secrète côté client dans une vraie application.
-    const NFT_STORAGE_API_KEY = "YOUR_NFT_STORAGE_API_KEY"; // Remplacez par votre clé
+    const NFT_STORAGE_API_KEY = "15d716b3.3cf0aa3350fb434bb59cb413af555c8c"; // Remplacez par votre clé
 
     // --- VARIABLES GLOBALES ---
     let provider = null;
